# vault-ninja-sdk

./: .env  README.md  openapi.yaml
.github/workflows/: generate-sdks.yml  release.yml
bash/: vault-ninja.sh
go/: .openapi-generator-ignore  api_secrets.go  client.go  configuration.go  go.mod  model_error.go  model_field_type.go  model_secret.go  model_secret_field.go  model_secret_file.go  model_secret_summary.go  response.go  utils.go
go/.openapi-generator/: FILES
go/api/: openapi.yaml
go/docs/: FieldType.md  Secret.md  SecretField.md  SecretFile.md  SecretSummary.md  SecretsAPI.md
go/test/: api_secrets_test.go
go/vaultninja/: client.go
python/: .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  pyproject.toml  setup.py  tox.ini
python/.github/workflows/: python.yml
python/.openapi-generator/: FILES
python/docs/: Error.md  FieldType.md  Secret.md  SecretField.md  SecretFile.md  SecretSummary.md  SecretsApi.md
python/test/: test_error.py  test_field_type.py  test_secret.py  test_secret_field.py  test_secret_file.py  test_secret_summary.py  test_secrets_api.py
python/vault_ninja/: __init__.py  api_client.py  client.py  configuration.py  exceptions.py  rest.py
python/vault_ninja/api/: __init__.py  secrets_api.py
python/vault_ninja/models/: __init__.py  error.py  field_type.py  secret.py  secret_field.py  secret_file.py  secret_summary.py
python/vaultninja/: __init__.py
tests/: run_all.sh  test_bash.sh  test_python.py  test_typescript.js
typescript/: .openapi-generator-ignore  package.json  tsconfig.json
typescript/src/: client.ts  (+4 more)
(+18 files in other folders)
