[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-ninja"
version = "1.0.2"
description = "Vault Ninja SDK — read org secrets programmatically"
requires-python = ">=3.9"
dependencies = ["urllib3>=1.25.3", "python-dateutil"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vault_ninja*"]
