[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultninja"
version = "1.1.0"
description = "Vault Ninja SDK — read org secrets programmatically"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["vaultninja*"]
